--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,86 @@
 body {
+  background-color: dimgray;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+.inputbox {
+  width: 350px;
+  height: 45px;
+  margin-bottom: 40px;
+  font-size: larger;
+  align-items: center;
+  text-align: center;
+  border-radius: 10px;
+  margin-top: 50px;
+  margin-right: 50px;
+  border-style: none;
+}
+.addBtn {
+  width: 85px;
+  height: 45px;
+  margin-bottom: 10px;
+  color: aquamarine;
+  background-color: black;
+  font-size: larger;
+  border-radius: 10px;
+  margin-right: 50px;
+  margin-top: 10px;
+  box-shadow: 2px;
+  box-shadow: #dddddd;
+}
+.addBtn:hover {
+  opacity: 60%;
+}
+.editBtn {
+  width: 85px;
+  height: 45px;
+  margin-bottom: 10px;
+  color: aquamarine;
+  background-color: black;
+  font-size: larger;
+  border-radius: 10px;
+  margin-right: 10px;
+  margin-top: 10px;
+  box-shadow: 2px;
+  box-shadow: #dddddd;
+}
+.deleteBtn {
+  width: 85px;
+  height: 45px;
+  margin-bottom: 10px;
+  color: aquamarine;
+  background-color: black;
+  font-size: larger;
+  border-radius: 10px;
+  margin-right: 10px;
+  margin-top: 10px;
+  box-shadow: 2px;
+  box-shadow: #dddddd;
+}
+.newEl {
+  width: 350px;
+  height: 45px;
+  margin-bottom: 20px;
+  font-size: larger;
+  align-items: center;
+  text-align: center;
+  border-radius: 10px;
+  margin-right: 20px;
+  margin-left: 30%;
+  border-style: none;
+}
+.heading {
+  font-family: sans-serif;
+  font-size: xx-large;
+  font-weight: bold;
+  color: #dddddd;
 }
